--- a/src/components/CatCard/style.css
+++ b/src/components/CatCard/style.css
@@ -24,7 +24,12 @@
   .img-thumbnail{
     padding: 2px;
     margin:0 auto;
+    height:180px;
+    width:100%;
+    object-fit: cover;
   }
+
+  
 
  
 
